Closed Bug 405744 Opened 18 years ago Closed 18 years ago

Re-implement Command-back/forward handling

Categories

(Camino Graveyard :: General, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: stuart.morgan+bugzilla, Assigned: stuart.morgan+bugzilla)

References

Details

(Keywords: regression)

Attachments

(1 file)

Due to changes in the way Cocoa widgets propagate key events on trunk, the current implementation of Command-back/forward is not going to work, which is now considered expected behavior. Instead, the current thinking is that we need to implement this as performKeyEquivalent: handler that checks whether a text field is focused, and treats it as a history command if not.
Target Milestone: --- → Camino2.0
Will this be able to check for text fields in plug-ins, or just HTML? Maybe cmd-arrows aren't common there, but delete probably is.
The delete code actually already checks for both plugins in general and text fields, due to bugs where deletes that were being handled were still bleeding through to us, so we can do the same here.
Assignee: stuart.morgan → nobody
Attached patch fixSplinter Review
This is a little more fragile than the old way, but I've covered all the cases I know of where the content might map this to an editing command, and I think it's the best we can do under the new world order of key handling.
Assignee: nobody → stuart.morgan
Status: NEW → ASSIGNED
Attachment #312540 - Flags: superreview?(mikepinkerton)
Attachment #312540 - Flags: superreview?(mikepinkerton) → superreview+
Landed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
I tested with my own build, attachment 312540 [details] [diff] [review] causes two problems. 1) Even if command key isn't pressed, only arrow keys enable back/forward handling. 2) Previous/Next Tab shortcuts [Option-Command-Arrows] can't work.
Stupid order of binary operations. Fix checked in. Sorry, I must have changed the conditional format and not fully re-tested, since I know it was right at some point. Thanks for the early warning.
Thannl you for your quick fix, Stuart. I confirmed that the problems have been solved.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: