Camino only - Bug 405744: Fix command-forward/back shortcuts. r/sr=pink